# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  engine.py  file.py  log.py  logging.py  request.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_file.py  test_page_loader.py  test_requests.py
tests/fixtures/: expected.html  page.html
